fixed bugs and aligned buttons

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
   transition: all 2s; }
   .button-restart {
     color: #fff;
-    margin-right: 10rem;
+    margin-left: 6rem;
     opacity: 0;
     transition: opacity 2s;
     width: 10rem;
@@ -128,7 +128,8 @@ body {
       transform: scale(1);
       box-shadow: none; }
   .button-change {
-    margin-left: 5rem;
+    margin-left: 20rem;
+    margin-right: 5rem;
     color: #fff;
     opacity: 1;
     display: block;
@@ -155,6 +156,7 @@ body {
     box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #2e89ff, 0 0 0.8rem #2e89ff, 0 0 2.8rem #2e89ff, inset 0 0 1.3rem #2e89ff; }
 
 .replay {
+  margin-left: 5rem;
   display: flex;
   opacity: 0;
   transition: opacity 1s; }
@@ -171,9 +173,18 @@ body {
     transform: scale(1.2); }
 
 .bg-video {
-  position: absolute; }
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1; }
+  .bg-video-content {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover; }
 
 .tic-box {
+  color: #fff;
   margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(3, 20rem);
