--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,7 +7,7 @@
 
   &-restart {
     color: $color-white;
-    margin-right: 10rem;
+    margin-left: 6rem;
     opacity: 0;
     transition: opacity 2s;
     width: $button-width;
@@ -32,7 +32,8 @@
   }
 
   &-change {
-    margin-left: 5rem;
+    margin-left: 20rem;
+    margin-right: 5rem;
     color: $color-white;
     opacity: 1;
     display: block;
@@ -72,7 +73,7 @@
 }
 
 .replay {
-  // margin-left: 5rem;
+  margin-left: 5rem;
   display: flex;
   opacity: 0;
   transition: opacity 1s;
