--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,19 @@
 .bg-video {
   position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+
+  &-content {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+  }
 }
 
 .tic-box {
+  color: $color-white;
   margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(3, 20rem);
